feat: 增加 Vue 2.X 的编译过程 refactor: 移动 说说对 SSR 的了解 的位置

--- a/chatAbout/前端物语-常识.md
+++ b/chatAbout/前端物语-常识.md
@@ -379,3 +379,18 @@ Javascript 是运行在单线程环境中，无法同时运行多个脚本，当
 **1.数学运算**：`Web Worker` 最简单的应用就是用来做后台计算，对 `CPU` 密集型的场景再适合不过了。
 **2.图像处理**：通过使用从`<canvas>`中获取的数据，可以把图像分割成几个不同的区域并且把它们推送给并行的不同 `Workers` 来做计算，对图像进行像素级的处理，再把处理完成的图像数据返回给主页面。
 **3.大数据的处理**：目前 `mvvm` 框架越来越普及，基于数据驱动的开发模式也越愈发流行，未来大数据的处理也可能转向到前台，这时，将大数据的处理交给在 `Web Worker` 也是上上之策了吧。
+
+### 说说对 SSR 的了解
+
+`SSR` 也就是服务端渲染，也就是将 `Vue` 在客户端把标签渲染成 `HTML` 的工作放在服务端完成，然后再把 `html` 直接返回给客户端
+
+#### SSR 的优势
+
+- 更好的 `SEO`
+- 首屏加载速度更快
+
+#### SSR 的缺点
+
+- 开发条件会受到限制，服务器端渲染只支持 `beforeCreate` 和 `created` 两个钩子
+- 当我们需要一些外部扩展库时需要特殊处理，服务端渲染应用程序也需要处于 `Node.js` 的运行环境
+- 更多的服务端负载
