--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -226,6 +226,46 @@ getNames(res).then(() => {
 
 > 就在今天，2.0 刚刚整理完毕，3.0 正式推出。:point_right:[快乐就完事了](https://vue-composition-api-rfc.netlify.com/#api-introduction):point_left:
 
+### Vue 2.X 的编译过程
+
+#### parse
+
+> 解析模板字符串生成 AST `const ast = parse(template.trim(), options)`
+
+parse 的目标是将`template`模板字符串转换成 AST 树，它是一种用 Javascript 对象的形式来描述整个模板。AST 元素节点总共有 3 种类型，用 type 表示：
+
+- 1 表示普通元素
+- 2 表示表达式
+- 3 表示纯文本
+
+当 AST 树构造完毕，下一步就是 `optimize` 优化这棵树。
+
+#### optimize
+
+> 优化语法树 `optimize(ast, options)`
+
+`optimize` 的过程，其实就是深度遍历这个 AST 树，去检测它的每一个子树是不是静态节点，如果是静态节点则它们生成的 DOM 永远不需要改变，这对运行时对模板的更新起到极大的优化作用。
+
+#### codegen
+
+> 生成代码 `const code = generate(ast, options)`
+
+```js
+export function generate(
+  ast: ASTElement | void,
+  options: CompilerOptions
+): CodegenResult {
+  const state = new CodegenState(options);
+  const code = ast ? genElement(ast, state) : '_c("div")';
+  return {
+    render: `with(this){return ${code}}`,
+    staticRenderFns: state.staticRenderFns
+  };
+}
+```
+
+generate 函数首先通过 `genElement(ast, state)` 生成 code，再把 code 用 `with(this){return ${code}}}` 包裹起来。对 `v-if`、`v-for` 等指令的处理就是在 `genElement` 函数中完成的。
+
 ### macro/micro task 宏任务、微任务
 
 在事件循环中，每进行一次循环操作称为 `tick`，每一次 `tick` 的任务处理模型是比较复杂的，但关键步骤如下：
@@ -876,21 +916,6 @@ function schedule() {
   isMount = false;
 }
 ```
-
-### 说说对 SSR 的了解
-
-`SSR` 也就是服务端渲染，也就是将 `Vue` 在客户端把标签渲染成 `HTML` 的工作放在服务端完成，然后再把 `html` 直接返回给客户端
-
-#### SSR 的优势
-
-- 更好的 `SEO`
-- 首屏加载速度更快
-
-#### SSR 的缺点
-
-- 开发条件会受到限制，服务器端渲染只支持 `beforeCreate` 和 `created` 两个钩子
-- 当我们需要一些外部扩展库时需要特殊处理，服务端渲染应用程序也需要处于 `Node.js` 的运行环境
-- 更多的服务端负载
 
 ### - Vue 3.X 新特性 :checkered_flag:
 
