feat: 算法增加子集

--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -208,6 +208,26 @@ var permute = function (nums) {
 permute([1, 2, 3]);
 ```
 
+### [78. 子集](https://leetcode-cn.com/problems/subsets/)
+
+```javascript
+// [1,2,3]
+var subsets = function (nums) {
+  const ans = [];
+  const dfs = (path, index) => {
+    ans.push(path);
+    for (let i = index; i < nums.length; i++) {
+      dfs(path.concat(nums[i]), i + 1);
+    }
+  };
+  dfs([], 0);
+
+  return ans;
+};
+
+subsets([1, 2, 3]);
+```
+
 ### [48. 旋转图像](https://leetcode-cn.com/problems/rotate-image/)
 
 ```javascript
