refactor: 更新算法-二叉树遍历

--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -300,6 +300,12 @@ spiralOrder([
 
 ![](./../resource/advanced_binaryTree.png)
 
+#### 二叉树遍历顺序
+
+- 前序遍历：中，左，右
+- 中序遍历：左，中，右
+- 后序遍历：左，右，中
+
 #### 解法一： 递归
 
 ```javascript
@@ -322,7 +328,13 @@ var traversal = function (root) {
 #### 解法二： 非递归 + 颜色标记法
 
 ```javascript
-// 该方法表示前序遍历，中、后序遍历调整相应位置即可
+/**
+ * 该方法表示中序遍历，核心是出栈顺序和遍历顺序相反
+ * 前序遍历：中、左、右。那么入栈顺序就为：右、左、中
+ * 中序遍历：左、中、右。那么入栈顺序就为：右、中、左
+ * 后序遍历：左、右、中。那么入栈顺序就为：中、右、左
+ *
+ */
 var traversal = function (root) {
   const [WHITE, GRAY] = [0, 1]; // WHITE - 未访问的新结点； GRAY - 已访问的结点
   const res = [];
