feat: 增加Vue keep-alive 的实现原理及 LRU 缓存策略

--- a/interview/前端进阶-甲.md
+++ b/interview/前端进阶-甲.md
@@ -365,3 +365,47 @@ javascript 函数创建, 需要注意:
 - `v-model` 是用来在表单控件或者组件上创建双向绑定的
 - 他的本质是 `v-bind` 和 `v-on` 的语法糖
 - 在一个组件上使用 `v-model`，默认会为组件绑定名为 `value` 的 `prop` 和名为 `input` 的事件
+
+#### Vue keep-alive 的实现原理及 LRU 缓存策略
+
+##### props:
+
+- include：只有名称匹配的组件才会被缓存
+- exclude: 任何名称匹配的组件都不会被缓存
+- max: 最多可以缓存多少组件实例。(2.5.0 新增, 一旦这个数字达到了，在新实例被创建之前，已缓存组件中最久没有被访问的实例会被销毁掉)
+
+##### 何时使用缓存：
+
+1. 判断当前组件是否要被缓存，根据设置的 `include`/`exclude` 进行匹配。
+2. 命中缓存则直接获取，同时更新 `key` 在 `this.keys` 中的位置（更新 key 的位置是实现 `LRU` 置换策略的关键）。
+3. 不命中缓存则设置进缓存，同时检查缓存实例数量是否超过 `max`。
+4. 将当前组件实例中的 `keepAlive` 设置为 `true`, 这个在缓存选中过程中会用到。
+
+##### abstract 属性，表示抽象组件
+
+`vue` 在初始化生命周期的时候，为组件实例建立父子关系时会根据 `abstract` 属性决定是否忽略某个组件。在 `keep-alive` 中，设置了 `abstract:true`，那 `Vue` 就会跳过该组件实例。
+
+```js
+export function initLifecycle (vm: Component) {
+  const options = vm.$options
+
+  // locate first non-abstract parent
+  let parent = options.parent
+  if (parent && !options.abstract) {
+    while (parent.$options.abstract && parent.$parent) {
+      parent = parent.$parent
+    }
+    parent.$children.push(vm)
+  }
+  ...
+}
+```
+
+##### LRU 缓存策略
+
+LRU（Least rencently used） 算法根据数据的历史访问记录来进行淘汰，其核心思想是“如果数据最近被访问过，那么将来被访问的几率也很高”。
+最常见的实现是使用一个链表保存缓存数据，详细算法实现如下：
+
+1. 新数据插入到链表头部
+2. 每当缓存命中（即缓存数据被访问），则将数据移到链表头部
+3. 链表满（新增未访问数据插入）的时候，将链表尾部的数据丢弃
