--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -383,6 +383,24 @@ var buildTree = function (inorder, postorder) {
 };
 ```
 
+### [110. 平衡二叉树](https://leetcode-cn.com/problems/balanced-binary-tree/)
+
+```javascript
+var isBalanced = function (root) {
+  const getDepth = (node) => {
+    if (!node) return 0;
+    return Math.max(getDepth(node.left), getDepth(node.right)) + 1;
+  };
+
+  if (!root) return true;
+  return (
+    Math.abs(getDepth(root.left) - getDepth(root.right)) <= 1 &&
+    isBalanced(root.left) &&
+    isBalanced(root.right)
+  );
+};
+```
+
 ### [236. 二叉树的最近公共祖先](https://leetcode-cn.com/problems/lowest-common-ancestor-of-a-binary-tree/)
 
 ```javascript
