refactor: 算法分割回文串优化

--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -634,6 +634,49 @@ var deleteDuplicates = function (head) {
 
 ### [131. 分割回文串](https://leetcode-cn.com/problems/palindrome-partitioning/)
 
+#### 解法一： dfs + 优化
+
+```javascript
+const isPalindrome = (str) => {
+  let left = 0,
+    right = str.length - 1;
+  while (left < right) {
+    if (str[left] != str[right]) return false;
+    left++;
+    right--;
+  }
+
+  return true;
+};
+
+const partitionHelper = (start) => {
+  // 递归出口，空字符串
+  if (start == s.length) {
+    const list = [];
+    const ans = [];
+    ans.push(list);
+
+    return ans;
+  }
+  const ans = [];
+  for (let i = start; i < s.length; i++) {
+    if (isPalindrome(s.substring(start, i + 1))) {
+      let left = s.substring(start, i + 1);
+      // 遍历后边字符串的所有结果，将当前的字符串加到头部
+      for (let arr of partitionHelper(i + 1)) {
+        arr.unshift(left);
+        ans.push(arr);
+      }
+    }
+  }
+  return ans;
+};
+
+return partitionHelper(0);
+```
+
+#### 解法二： dp + dfs
+
 ```javascript
 var partition = function (s) {
   const n = s.length;
