feat: React 官方 Hooks 总结

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -917,6 +917,121 @@ function schedule() {
 }
 ```
 
+### React 官方 Hooks 总结
+
+首先我们要清楚 `Hook` 的两个额外规则：
+
+1. 只能在顶层调用 `HOOK`，不要在循环、条件或嵌套函数中调用 `Hook` 。
+2. 仅从 `React` 函数式组件中调用 `Hook`，不要从常规 JavasScript 函数调用 `Hook`。
+
+#### useState
+
+`usetState` 使我们可以在函数组件中来更新本地 `state` (状态)。类似类组件中的 `this.state` 。返回两个参数，第一个参数是带有响应式的 `state`，第二个是可以更新 `state` 的函数。
+
+```js
+const [num, setNum] = useState(0);
+```
+
+#### useEffect
+
+可以把 `useEffect` Hook 看做 `componentDidMount`，`componentDidUpdate` 和 `componentWillUnmount` 这三个函数的组合。可以利用这个函数来执行一些副作用，比如 `ajax` 请求、访问原生 `dom` 元素、本地持久化缓存、绑定/解绑事件、添加订阅、设置定时器、记录日志等。
+
+##### 模拟 componentDidMount 和 componentDidUpdate
+
+```javascript
+useEffect(() => {
+  document.title = `你点击了${number}次`;
+});
+```
+
+##### 清除副作用
+
+```js
+// 方式一： 返回一个清除副作用的函数
+useEffect(() => {
+  console.log("开启一个新的定时器");
+  let $timer = setInterval(() => {
+    setNumber((number) => number + 1);
+  }, 1000);
+
+  // useEffect 如果返回一个函数的话，该函数会在组件卸载和更新时调用
+  return () => {
+    console.log("destroy effect");
+    clearInterval($timer);
+  };
+});
+
+// 方式二： 第一个参数传空数组
+useEffect(() => {
+  console.log("开启一个新的定时器");
+  let $timer = setInterval(() => {
+    setNumber((number) => number + 1);
+  }, 1000);
+}, []); // 或者在这里传入一个空的依赖项数组，这样就不会去重复执行
+```
+
+##### 性能优化
+
+类似清除副作用的方式二，第二个参数的入参决定是否执行 `useEffect` 的第一个参数函数。
+
+```js
+const [text, setText] = useState("");
+
+useEffect(() => {
+  console.log("useEffect");
+  let $timer = setInterval(() => {
+    setNumber((number) => number + 1);
+  }, 1000);
+}, [text]); // 数组表示 effect 依赖的变量，只有当这个变量发生改变之后才会重新执行 efffect 函数
+```
+
+##### 使用多个 Effect 实现关注点分离
+
+简而言之就是我们可以在函数内使用多个 useEffect 来包裹不同业务的逻辑。
+
+```js
+// Hooks 版
+function FriendStatusWithCounter(props) {
+  const [count, setCount] = useState(0);
+  useEffect(() => {
+    document.title = `You clicked ${count} times`;
+  });
+
+  const [isOnline, setIsOnline] = useState(null);
+  useEffect(() => {
+    function handleStatusChange(status) {
+      setIsOnline(status.isOnline);
+    }
+
+    ChatAPI.subscribeToFriendStatus(props.friend.id, handleStatusChange);
+    return () => {
+      ChatAPI.unsubscribeFromFriendStatus(props.friend.id, handleStatusChange);
+    };
+  });
+  // ...
+}
+```
+
+#### useReducer
+
+`useState` 的替代方案，`rudex` 的一个应用场景。它接收一个形如 `（state, action） => newSate` 的 `reducer`。在某些场景下，`useReducer` 会比 `useState` 更适用，例如 `state` 逻辑复杂且包含多个子值，或者下一个 `state` 依赖于之前的 `state` 等。
+
+#### useMemo
+
+类似类组件中的 `React.memo` 功能，**关注对函数执行结果的缓存**。
+
+#### useCallback
+
+`useCallback(fn, deps)` 类似 `useMemo(() => fn, deps)` ,**关注对函数的缓存**。
+
+#### useRef
+
+返回一个可变的 `ref` 对象，其 `.current` 属性被初始化为传入的参数（initialValue）。返回的 `ref` 对象在组件的整个生命周期内持续存在。**变更 `.current` 不会引发组件的重新渲染**。
+
+#### useImperativeHandle
+
+比如 `input` 子组件通过 `useImperativeHandle` 可以控制只暴露 `focus` 方法给父组件。**建议 `useImperativeHandle` 和 `forwardRef` 同时使用**，减少暴露给父组件的属性，避免使用 `ref` 这样的命令式代码。
+
 ### React 性能优化
 
 #### PureComponent/shouldComponentUpdate
