feat: TS 的一些实用工具泛型

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -1018,3 +1018,110 @@ async function test() {
   - 避免频繁操作样式
   - 避免频繁操作 DOM
   - 对复杂动画脱离文档流使用绝对定位
+
+#### TS 的一些实用工具泛型
+
+##### 一、Partial 将传入的属性变为可选项
+
+首先我们理解两个关键字 `keyof` 和 `in` , `keyof` 可以获取一个对象接口中所有的 `key` 值。比如：
+
+```ts
+interface Foo {
+  name: string;
+  age: number;
+}
+type T = keyof Foo; // -> "name" | "age"
+```
+
+而 `in` 则可以遍历枚举类型，比如：
+
+```ts
+type Keys = "a" | "b";
+type Obj = {
+  [p in Keys]: any;
+}; // -> { a: any, b: any }
+```
+
+结合上述知识我们看下 `Partial` 源码是如何将传人属性变为可选项的：
+
+```ts
+type Partial<T> = { [P in keyof T]?: T[P] };
+```
+
+##### 二、Required 将传入属性变为必选项
+
+意义上是和 `Partial` 的反向操作，看下源码：
+
+```ts
+type Required<T> = { [P in keyof T]-?: T[P] };
+```
+
+##### 三、Record 将 K 中所有属性的值转化为 T 类型
+
+比如我需要一个对象，有 `"A" | "B" | "C"` 三个属性，属性的值必须是数字，那么就这么写：
+
+```ts
+type keys = "A" | "B" | "C";
+const result: Record<keys, number> = {
+  A: 1,
+  B: 2,
+  C: 3
+};
+```
+
+很好理解，Record 后面的泛型就是对象键和值的类型。看下源码：
+
+```ts
+type Record<K extends keyof any, T> = { [P in K]: T };
+```
+
+##### 四、Pick 从 T 中取出一系列 K 的属性
+
+比如从一个符合类型中，想取出几个想要的类型组合，我们会如何做：
+
+```ts
+interface State {
+  name: string;
+  age: number;
+  favorite: string[];
+}
+
+// 只想要 name 和 favarite
+interface NFState {
+  name: string;
+  favorite: string[];
+}
+
+// 上面会造成类型冗余，需要维护多份类型。可以用下面的方式代替
+type NFState = Pick<State, "name" | "favorite">;
+```
+
+##### 五、Omit 从 T 中取出非 K 的一系列属性
+
+还是上述例子
+
+```ts
+// 代替方案可以改为
+type NFState = Omit<State, "age">;
+```
+
+跟 `Pick` 的操作有反向作用，实际应用中如何选择看我们如何能更简单的拿到我们的结果。源码：
+
+```ts
+type Omit<T, K> = Pick<T, Exclude<keyof T, K>>;
+```
+
+##### 六、ReturnType 见名知意，取到函数的返回类型
+
+```ts
+function foo(x: number): Array<number> {
+  return [x];
+}
+type fn = ReturnType<typeof foo>; // Array<number>
+```
+
+看下源码实现：
+
+```ts
+type ReturnType<T> = T extends (...args: any[]) => infer R ? R : any;
+```
