feat：前端基础补充

--- a/interview/前端基础-甲.md
+++ b/interview/前端基础-甲.md
@@ -28,6 +28,36 @@
 分析这种问题的时候，有意识拆分变量声明和赋值，提升函数位置会看得更明显
 ```
 
+> 函数提升优先级高于变量提升，且不会被同名变量声明覆盖，但是会被变量赋值后覆盖。而且存在同名函数与同名变量时，优先执行函数。
+
+```js
+console.log(a); // f a()
+console.log(a()); // 1
+var a = 1;
+function a() {
+  console.log(1);
+}
+console.log(a); // 1
+a = 3;
+console.log(a()); // a not a function
+```
+
+变量提升后相当于
+
+```js
+var a = function () {
+  // 声明一个变量a指向
+  console.log(1);
+};
+var a;
+console.log(a); // 如果a不优先执行含函数，这里是返回undefined;
+console.log(a());
+a = 1; // 这里函数与变量
+console.log(a);
+a = 3;
+console.log(a());
+```
+
 #### 运算符 `&` 与 `&&` 和 `|` 与 `||`
 
 - `&`和 `|` 既是逻辑运算符也是位运算符，而`&&`和`||`只是逻辑运算符
@@ -35,40 +65,72 @@
 - `&&`和`||`两边都要看，看完之后再输出
 - `&&`左真看右，左假为假；`||`左真为真，左假看右
 
+##### ?? 空值合并操作符
+
+空值合并操作符（`??`）是一个逻辑操作符，当左侧的操作数为 **`null` 或者 `undefined`** 时，返回其右侧操作数，否则返回左侧操作数。
+
+```js
+const nullValue = null;
+const emptyText = ""; // 空字符串，是一个假值，Boolean("") === false
+const someNumber = 42;
+
+const valA = nullValue ?? "valA 的默认值";
+const valB = emptyText ?? "valB 的默认值";
+const valC = someNumber ?? 0;
+
+console.log(valA); // "valA 的默认值"
+console.log(valB); // ""（空字符串虽然是假值，但不是 null 或者 undefined）
+console.log(valC); // 42
+```
+
 #### `String` 字符串对象属性
 
-```
-length、concat(String)、indexOf(String)、substr(num1,[num2])、toLowerCase()、toUpperCase()、replace(str1,str2)
+- `length`
+- `concat(String)`
+- `indexOf(String)`
+- `substr(num1,[num2])`
+- `toLowerCase()`
+- `toUpperCase()`
+- `replace(str1,str2)`
 
-Date日期对象：getYear()/getFullYear()/getMonth()/getDate()...
+##### Date 日期对象：
 
-Math数学对象：ceil(数值)向下取整、floor(数值)向上取整、min(num1,num2)/max(num1,num2)返回最大最小值、pow(x,n)返回x的n次方、random()、round(数值)四舍五入、sqrt(数值)开平方
-```
+- `getYear()`
+- `getFullYear()`
+- `getMonth()`
+- `getDate()`
+- ...
+
+##### Math 数学对象：
+
+-` ceil(数值)`向下取整
+
+- `floor(数值)`向上取整
+- `min(num1,num2)`/`max(num1,num2)`返回最大最小值
+- `pow(x,n)`返回 x 的 n 次方
+- `random()`
+- `round(数值)`四舍五入
+- `sqrt(数值)`开平方
 
 #### `Window` 对象
 
-- alert
-- confirm
-- prompt
-- close
-- print
-- setintval
-- clearintval
-- setTimeout
-- clearTimeout
-- window 对象的子对象：
+- `alert`
+- `confirm`
+- `prompt`
+- `close`
+- `print`
+- `setintval`
+- `clearintval`
+- `setTimeout`
+- `clearTimeout`
 
-```
-  navigator(浏览器信息对象)
+##### `window` 对象的子对象：
 
-  location(地址栏对象)：host 主机、port 端口、href 地址
-
-  history(历史记录)：length 历史记录数目
-
-  screen(屏幕对象)：height/width
-
-  document HTML 文档对象
-```
+- navigator(浏览器信息对象)
+- location(地址栏对象)：host 主机、port 端口、href 地址
+- history(历史记录)：length 历史记录数目
+- screen(屏幕对象)：height/width
+- document HTML 文档对象
 
 #### history 修改 URL 的方法
 
@@ -315,13 +377,11 @@ function quickSort(arr) {
 
 ##### 求解算法的时间复杂度的具体步骤：
 
-```
-一、找出算法中基本语句；
+1. 找出算法中基本语句；
 
-二、计算基本语句的执行次数的数量级；
+2. 计算基本语句的执行次数的数量级；
 
-三、用大 O 记号表示算法的时间性能；
-```
+3. 用大 O 记号表示算法的时间性能；
 
 #### 线性表查找
 
@@ -352,7 +412,7 @@ function quickSort(arr) {
 - onmouseover、onmouseout：鼠标移动到自身时候会触发事件，同时移动到其子元素身上也会触发事件
 - onmouseenter、onmouseleave：鼠标移动到自身是会触发事件，但是移动到其子元素身上不会触发事件
 
-#### 六大类数据类型
+#### JS 的数据类型
 
 - undefined
 - object
