refactor: 更新前端基础-乙

--- a/interview/前端基础-乙.md
+++ b/interview/前端基础-乙.md
@@ -80,22 +80,18 @@ target; // {a:1, b:2, c:3}
 
 #### Vue 生命周期和钩子函数
 
-| 生命周期      | 描述                                                                     |
-| ------------- | ------------------------------------------------------------------------ |
-| beforeCreate  | `$el`和`data`并未初始化 （`data`：undefined，`$el`：undefined）          |
-| created       | 完成了`data`数据的初始化，el 没有（`data`：XXX 可获取，\$el：undefined） |
-| beforeMount   | 完成了`$el`和`data`的初始化（`data`：XXX 可获取，`$el`：XXX 虚拟）       |
-| mounted       | 完成挂载（`data`：XXX 可获取，`$el`：XXX 真实）                          |
-| beforeUpdate  | 组件更新之前                                                             |
-| updated       | 组件更新之后                                                             |
-| \*activated   | 针对 `keep-alive`，组件被激活时调用                                      |
-| \*deactivated | 针对 `keep-alive`，组件被移除时调用                                      |
-| beforeDestory | 组建销毁前调用                                                           |
-| destoryed     | 组件销毁后调用                                                           |
-| beforecreate  | 举个栗子：可以在这加个 loading 事件                                      |
-| created       | 在这结束 loading，还做一些初始化，实现函数自执行                         |
-| mounted       | 在这发起后端请求，拿回数据，配合路由钩子做一些事情                       |
-| beforeDestory | 你确认删除 XX 吗？ `destoryed` ：当前组件已被删除，清空相关内容          |
+| 生命周期      | 描述                                                                     | 应用场景举例                                                    |
+| ------------- | ------------------------------------------------------------------------ | --------------------------------------------------------------- |
+| beforeCreate  | `$el`和`data`并未初始化 （`data`：undefined，`$el`：undefined）          | 可以在这加个 loading 事件                                       |
+| created       | 完成了`data`数据的初始化，el 没有（`data`：XXX 可获取，\$el：undefined） | 在这结束 loading，还做一些初始化，实现函数自执行                |
+| beforeMount   | 完成了`$el`和`data`的初始化（`data`：XXX 可获取，`$el`：XXX 虚拟）       |                                                                 |
+| mounted       | 完成挂载（`data`：XXX 可获取，`$el`：XXX 真实）                          | 在这发起后端请求，拿回数据，配合路由钩子做一些事情              |
+| beforeUpdate  | 组件更新之前                                                             |                                                                 |
+| updated       | 组件更新之后                                                             |                                                                 |
+| \*activated   | 针对 `keep-alive`，组件被激活时调用                                      |                                                                 |
+| \*deactivated | 针对 `keep-alive`，组件被移除时调用                                      |                                                                 |
+| beforeDestory | 组建销毁前调用                                                           | 你确认删除 XX 吗？ `destoryed` ：当前组件已被删除，清空相关内容 |
+| destoryed     | 组件销毁后调用                                                           |                                                                 |
 
 #### addEventListener 监听函数
 
@@ -332,13 +328,29 @@ chineseAndEngAndNumber.sort((x, y) => {
 
 #### Number/JSON
 
-```javascript
-Infinity; // 无穷数 一般用来描述动画的重复次数; N维数组的无限降维 arr.flat(Infinity)
-Number.isFinite(obj); // isFinite()检测传入的参数是否是一个有穷数
-Number.isNaN(obj); // isNaN()函数用于检查其参数是否是非数字值。
-JSON.parse(); // 用于将一个 JSON 字符串转换为 JavaScript 对象。
-JSON.stringify(); // 用于将 JavaScript 值转换为 JSON 字符串。
-```
+##### Infinity
+
+无穷数 一般用来描述动画的重复次数; N 维数组的无限降维 arr.flat(Infinity)
+
+##### Number.MAX_SAFE_INTEGER（ES6）
+
+JS 中定义了一个常量，代表浮点数中最大的正整数 `power(2, 53) - 1`
+
+##### Number.isFinite(obj)
+
+isFinite()检测传入的参数是否是一个有穷数
+
+##### Number.isNaN(obj)
+
+isNaN()函数用于检查其参数是否是非数字值。
+
+##### JSON.parse()
+
+用于将一个 JSON 字符串转换为 JavaScript 对象。
+
+##### JSON.stringify()
+
+用于将 JavaScript 值转换为 JSON 字符串。
 
 #### attachEvent 和 addEventListener
 
