refactor: 同源策略及解决跨域问题

--- a/interview/前端基础-丙.md
+++ b/interview/前端基础-丙.md
@@ -106,20 +106,59 @@ m.get(["a"]); // undefined。表面键相同但是内存地址不一样
   JSON.stringify(map); // "{}"
   ```
 
-#### 同源策略
+#### 同源策略及解决跨域问题
 
-```
-源（origin）就是协议、域名和端口号。
-绕过同源策略:
-  代理、
-  Cors(跨域资源共享):
-    浏览器发送跨域请求时，设置Http Request Header Origin = Current URI
-    服务器若不接受该网站的跨域请求，则返回错误
-    服务器若接受其跨域请求，则在Response Header中设置Access-Control-Allow-Origin属性
-    浏览器看到Access-Control-Allow-Origin属性，同意解析返还结果。
-  Jsonp:
-    HTML中的script标签可以加载并执行其他域的javascript，于是我们可以通过script标记来动态加载其他域的资源
-```
+源（origin）就是**协议**、**域名**和**端口号**。
+
+绕过同源策略有以下几种方式：
+
+##### Jsonp
+
+HTML 中的 script 标签可以加载并执行其他域的 javascript，于是我们可以通过 script 标记来动态加载其他域的资源
+
+##### Cors(跨域资源共享)
+
+基本思想为使用自定义的 HTTP 头部让浏览器与服务器进行沟通，需要浏览器支持 CORS。
+
+- 客户端：发送 HTTP 请求时，额外添加一个 Origin 头部，包含请求页面的源信息，服务器根据此信息决定是否响应。
+  `Origin: test.com`
+
+- 服务端：在响应头添加 Access-Control-Allow-Origin，回发相同源信息（公共资源可回“\*”），若没有此头部，或头部源信息不匹配，浏览器会驳回请求。
+  `Access-Control-Allow-Origin: test.com`
+
+##### 反向代理
+
+跨域只是浏览器向服务器发送请求的时候，浏览器的限制。而服务器和服务器之间是没有跨域的限制的。反向代理是利用代理服务器接收到请求之后，转发给真正的服务器，并把结果返回到浏览器上。常见的应用：
+
+- `vue-cli` 的 `http-proxy-middleware` 来做代理：在使用 `vue-cli` 创建的项目的本地运行中，创建 vue.`config.js` 文件，里面放入如下内容：
+
+  ```js
+  module.exports = {
+    devServer: {
+      proxy: {
+        "^/": {
+          target: "http://localhost:8082/" // api server
+        }
+      }
+    }
+  };
+  ```
+
+- nginx 反向代理可以帮助服务器接收来自客户端的请求，帮助服务器做请求转发，负载均衡等。
+
+  ```js
+  /**
+   * 前端server的域名为：fe.server.com
+   * 后端服务的域名为：dev.server.com
+   */
+  server {
+          listen       80;
+          server_name  fe.server.com;
+          location / {
+                  proxy_pass dev.server.com;
+          }
+  }
+  ```
 
 #### CSS 的单位
 
