feat: 算法增加滑动窗口最大值

--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -417,6 +417,25 @@ var lowestCommonAncestor = function (root, p, q) {
 };
 ```
 
+### [239. 滑动窗口最大值](https://leetcode-cn.com/problems/sliding-window-maximum/)
+
+```javascript
+// nums = [1,3,-1,-3,5,3,6,7], k = 3
+var maxSlidingWindow = function (nums, k) {
+  const queue = []; // 存的是nums的下標
+  const res = [];
+  for (let i = 0; i < nums.length; i++) {
+    if (i - queue[0] >= k) queue.shift(); // 在滑动窗口之外的直接从队头删掉
+    while (nums[queue[queue.length - 1]] <= nums[i]) queue.pop();
+    queue.push(i);
+    // 数组下标从0开始，k=3时 ，下标为0，1，2的数组元素构成一个滑动窗口，所以条件为i>=k-1就可以将答案存入res中
+    if (i >= k - 1) res.push(nums[queue[0]]);
+  }
+  return res;
+};
+maxSlidingWindow([1, 3, -1, -3, 5, 3, 6, 7], 3); // [3,3,5,5,6,7]
+```
+
 ### [53. 最大子序和](https://leetcode-cn.com/problems/maximum-subarray/)
 
 ```javascript
