refactor: 补充 Promise 异步题的一些坑点

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -916,6 +916,38 @@ Promise._race = (list) =>
   });
 ```
 
+##### 异步题的一些坑点
+
+###### 链式调用：
+
+1. `Promise` 可以链式调用，不过 `promise` 每次调用 `.then` 或者 `.catch` 都会返回一个新的 `promise`
+2. `Promise` 内部只有 `resolve` 或者 `reject` 后链式回调才会响应
+3. `Promise` 的状态一旦改变就无法改变（只认可第一个 `resolve` 或者 `reject` ）
+
+###### finally：
+
+1. `finally()` 方法不管 `Promise` 对象最后的状态如何都会执行
+2. `finally()` 方法回调函数不接受如何参数，`finally((res)=> console.log(res))` 这里的 `res` 会一直为 `undefined`
+
+###### 返回值会自动包装
+
+```js
+async function fn() {
+  // return await 123
+  // 等同于
+  // return Promise.resolve(123)
+  // 等同于
+  return 123;
+}
+fn().then((res) => console.log(res));
+```
+
+###### .then 函数中的参数期待的是函数，如果不是函数的话会发生透传
+
+```js
+Promise.resolve(1).then(2).then(Promise.resolve(3)).then(console.log); // 1
+```
+
 #### JS 异步解决方案的发展历程以及优缺点
 
 ##### 1.回调函数 callback
