feat: 增加 Angular 组件间通信

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -61,7 +61,7 @@ new Vue{(
 
 > 父 beforeDestroy -> 子 beforeDestroy -> 子 destroyed -> 父 destroyed
 
-### Vue/React 组件间通信
+### Vue/React/Angular 组件间通信
 
 #### VUE
 
@@ -79,6 +79,18 @@ new Vue{(
 - 父向子传值：在组件中绑定属性，子组件中 `props` 就可以获取
 - 子向父传值：通过在子组件方法中通过 `props` 获取方法名，回调的方式传值
 - 跨级传参：外部库比如`redux`、`Provider、Consumer`
+
+#### Angular
+
+- 兄弟组件:
+  > `service`。某个 `module` 中注入 `service`,所有这个 `module` 的 `component` 都可以拿到这个 `service` 的属性,方法,是共享的
+  > `Rxjs` 的 `Observalbe`
+- 父向子传参：
+  > 父组件中通过属性值绑定，子组件通过 `@input` 获取。
+  > 父组件中通过 `@ViewChild()` 绑定子组件，可以调用子组件的方法。
+- 子向父传参：
+  > 子组件中绑定通过 `@output` 绑定一个 `EventEmitter`, 然后 `EventEmitter.emit(value)` 可以在父组件中监听。
+- 跨级传参：同兄弟组件。
 
 ### Vue 2.X 源码之『 VNode 』:checkered_flag:
 
