refactor：手写函数柯里化补充注释

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -216,6 +216,7 @@ function add() {
     return add.apply(null, args.concat(arg_fn));
   };
   // 3 最后一次执行会默认调用，并返回合并的值
+  // 重写toString(): 这个方法会把该对象的原始值以字符串形式返回
   fn.toString = function () {
     return args.reduce(function (a, b) {
       return a + b;
