feat: 补充 Promise.allSettled

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -851,7 +851,7 @@ class Promise {
 ```
 
 ```javascript
-// Promise.all/race 的使用示例
+// Promise.all/race/allSettled 的使用示例
 function test(num) {
   return new Promise((resolve, reject) => {
     if (num < 5) {
@@ -885,11 +885,35 @@ Promise.race([p1, p3, p2])
   .catch((error) => {
     console.error(error); // 执行结束
   });
+
+// [
+//     {
+//         "status": "fulfilled",
+//         "value": "执行成功3小于5"
+//     },
+//     {
+//         "status": "rejected",
+//         "reason": "执行结束"
+//     },
+//     {
+//         "status": "rejected",
+//         "reason": "执行失败8大于5"
+//     }
+// ]
+Promise.allSettled([p1, p3, p2])
+  .then((result) => {
+    console.log(result);
+  })
+  .catch((error) => {
+    console.error(error);
+  });
 ```
 
 > `Promise.all` 可以将多个 `Promise` 实例包装成一个新的 `Promise` 实例。同时，成功和失败的返回值是不同的，成功的时候返回的是一个结果数组，而失败的时候则返回最先被 reject 失败状态的值。
 
-> `Promse.race` 就是赛跑的意思，意思就是说，`Promise.race([p1, p2, p3])`里面哪个结果获得的快，就返回那个结果，不管结果本身是成功状态还是失败状态。
+> `Promise.race` 就是赛跑的意思，意思就是说，`Promise.race([p1, p2, p3])`里面哪个结果获得的快，就返回那个结果，不管结果本身是成功状态还是失败状态。
+
+> `Promise.allSettled` 方法返回一个在所有给定的 `promise` 都已经 `fulfilled` 或 `rejected` 后的 `promise`，并带有一个对象数组，每个对象表示对应的 `promise` 结果。
 
 ```javascript
 Promise._all = (list) =>
@@ -915,6 +939,21 @@ Promise._race = (list) =>
       item.then(((res) => resolve(res)).catch((err) => reject(err)));
     });
   });
+
+Promise.allSettled = function (promises) {
+  return Promise.all(
+    promises.map((p) =>
+      Promise.resolve(p).then(
+        (res) => {
+          return { status: "fulfilled", value: res };
+        },
+        (error) => {
+          return { status: "rejected", reason: error };
+        }
+      )
+    )
+  );
+};
 ```
 
 ##### 异步题的一些坑点
