feat: 算法增加 二叉树的序列化与反序列化

--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -383,6 +383,45 @@ var buildTree = function (inorder, postorder) {
 };
 ```
 
+### [297. 二叉树的序列化与反序列化](https://leetcode-cn.com/problems/serialize-and-deserialize-binary-tree/)
+
+```javascript
+// [1,2,3,null,null,4,5]
+/**
+ * Encodes a tree to a single string.
+ *
+ * @param {TreeNode} root
+ * @return {string}
+ */
+var serialize = function (root) {
+  if (!root) return " ";
+  const left = serialize(root.left);
+  const right = serialize(root.right);
+
+  return `${root.val},${left},${right}`;
+};
+
+/**
+ * Decodes your encoded data to tree.
+ *
+ * @param {string} data
+ * @return {TreeNode}
+ */
+var deserialize = function (data) {
+  const buildTree = (list) => {
+    const value = list.shift();
+
+    if (value == " ") return null;
+    const node = new TreeNode(value);
+    node.left = buildTree(list);
+    node.right = buildTree(list);
+    return node;
+  };
+
+  return buildTree(data.split(","));
+};
+```
+
 ### [110. 平衡二叉树](https://leetcode-cn.com/problems/balanced-binary-tree/)
 
 ```javascript
