feat: 算法增加 132 模式

--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -791,6 +791,28 @@ var longestPalindromeSubseq = function (s) {
 longestPalindromeSubseq("bbbab");
 ```
 
+### [456. 132 模式](https://leetcode-cn.com/problems/132-pattern/)
+
+```javascript
+// [3,4,6,4,3,-1,6]
+var find132pattern = function (nums) {
+  // 单调栈
+  const { length } = nums;
+  if (length < 3) return false;
+  let last = -Infinity;
+  const stack = [];
+  for (let i = length - 1; i >= 0; i--) {
+    if (nums[i] < last) return true;
+    while (stack.length > 0 && stack[stack.length - 1] < nums[i]) {
+      last = stack.pop();
+    }
+    stack.push(nums[i]);
+  }
+  return false;
+};
+find132pattern([3, 4, 6, 4, 3, -1, 6]); // true
+```
+
 ### [51. N 皇后](https://leetcode-cn.com/problems/n-queens/)
 
 ```javascript
