feat: 算法增加 删除字符串中的所有相邻重复项 II

--- a/other/算法-我的收藏.md
+++ b/other/算法-我的收藏.md
@@ -813,6 +813,26 @@ var find132pattern = function (nums) {
 find132pattern([3, 4, 6, 4, 3, -1, 6]); // true
 ```
 
+### [1209. 删除字符串中的所有相邻重复项 II](https://leetcode-cn.com/problems/remove-all-adjacent-duplicates-in-string-ii/)
+
+```javascript
+// s = "deeedbbcccbdaa", k = 3
+var removeDuplicates = function (s, k) {
+  let stack = [];
+  for (let c of s) {
+    let prev = stack.pop();
+    if (!prev || prev[0] !== c) {
+      stack.push(prev);
+      stack.push(c);
+    } else if (prev.length < k - 1) {
+      stack.push(prev + c);
+    }
+  }
+  return stack.join("");
+};
+removeDuplicates("deeedbbcccbdaa", 3); // aa
+```
+
 ### [51. N 皇后](https://leetcode-cn.com/problems/n-queens/)
 
 ```javascript
