refactor: 优化数据绑定实现

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -213,6 +213,23 @@ input.onkeyup = function(e) {
 };
 ```
 
+我们再用 `Proxy` 来实现该操作
+
+```javascript
+const source = { value: "" };
+const data = new Proxy(source, {
+  get: function (target, propKey, receiver) {
+    console.log(`getting ${propKey}!`);
+    return Reflect.get(target, propKey, receiver);
+  },
+  set: function (target, propKey, value, receiver) {
+    console.log(`setting ${propKey}!`);
+    text.innerHTML = value;
+    return Reflect.set(target, propKey, value, receiver);
+  }
+});
+```
+
 ### Vue 2.X 源码之『 NextTick 』:checkered_flag:
 
 JS 执行是单线程的，它基于`事件循环`。事件大致分为以下几个步骤：
