refactor: 更新 HTTPS 传输过程

--- a/chatAbout/前端物语-常识.md
+++ b/chatAbout/前端物语-常识.md
@@ -66,7 +66,11 @@ Q: HTTPS 为什么安全？
 
 Q: HTTPS 的传输过程是怎样的？
 
-> 客户端发起 `HTTPS` 请求，服务端返回 `CA` 数字证书，客户端对证书进行验证，验证通过后本地生成用于改造对称加密算法的随机数，通过证书中的公钥对随机数进行加密传输到服务端，服务端接收后通过私钥解密得到随机数，之后的数据交互通过对称加密算法进行加解密。
+> 1. 客户端发起 `HTTPS` 请求，服务端返回 `CA` 数字证书
+> 2. 客户端对证书进行验证，验证通过后本地生成用于改造对称加密算法的随机数
+> 3. 通过证书中的公钥对随机数进行加密传输到服务端
+> 4. 服务端接收后通过私钥解密得到随机数
+> 5. 之后的数据交互通过对称加密算法进行加解密。
 
 Q: 为什么需要 CA 数字证书？
 
