feat: 增加 React 合成事件的特点

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -363,8 +363,16 @@ class Example extends React.Component {
 
 在 `setState` 的实现中，会根据一个变量 `isBatchingUpdates` 判断是直接更新 `this.state` 还是放到 `task` 中下次再说。以上两种情况：
 
-a 情况是放到下次队列中合并 `setState` 一起执行，产生异步执行。
-b 情况会同步执行 `setState`
+a 情况（**钩子函数** 和 **合成事件**）是放到下次队列中合并 `setState` 一起执行，产生异步执行。
+b 情况（**异步函数** 和 **原生事件**）会同步执行 `setState`
+
+#### React 合成事件的特点
+
+1. 减少内存开销，因为所有的事件都绑定在 `document` 上，其他节点没有绑定事件。
+2. 规避 `fiber` 节点更新时 `dom` 节点还未挂载问题。
+3. 对象池的管理合成事件对象的创建和销毁，减少了垃圾的生成和新对象内存的分配，提高了性能。
+4. 对事件进行归类，可以在事件产生的任务上包含不同优先级。
+5. 抹平各浏览器的兼容性差异。
 
 ### 对比 Redux 和 Vuex
 
