feat: 补充 redux 的三个原则

--- a/interview/前端进阶-丁.md
+++ b/interview/前端进阶-丁.md
@@ -165,6 +165,12 @@ middleware1-2
 
 #### 手写 redux
 
+##### redux 的三个原则
+
+1. 应用的状态是一个唯一的状态树。
+2. 状态应是只可读的，只能通过 `action` 来触发修改，其实实际修改状态的是 `reducer`。
+3. 修改状态只能通过纯函数。
+
 ##### 要实现的 redux 主要有如下几个功能：
 
 - 获取应用 state
