--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -207,6 +207,7 @@ console.log(myInstanceof(undefined, Boolean));
 // 柯里化实现多参累加
 add(1)(3, 4)(3, 5); // 16
 add(2)(2)(3, 5); // 12
+console.log(Number(add(1)(3, 4)(3, 5))); // Number 触发 toString 函数
 function add() {
   // 1 把所有参数转换成数组
   let args = Array.prototype.slice.call(arguments);
