feat: 跨标签页的通信方式

--- a/chatAbout/前端物语-常识.md
+++ b/chatAbout/前端物语-常识.md
@@ -398,3 +398,16 @@ Javascript 是运行在单线程环境中，无法同时运行多个脚本，当
 - 开发条件会受到限制，服务器端渲染只支持 `beforeCreate` 和 `created` 两个钩子
 - 当我们需要一些外部扩展库时需要特殊处理，服务端渲染应用程序也需要处于 `Node.js` 的运行环境
 - 更多的服务端负载
+
+### 跨标签页的通信方式
+
+#### 对于同源的标签页
+
+- **广播模式**：Broadcast Channe / Service Worker / LocalStorage + StorageEvent
+- **共享存储模式**：Shared Worder / IndexedDB / Cookie
+- **基于服务端**：Websocket / Comet / SSE 等
+- **口口相传**：window.open + window.opener
+
+#### 对于非同源标签页
+
+可以嵌入同源 `iframe` 作为“桥”，将非同源标签页通信转化为同源标签页通信。
