refactor: 优化 Vue 2.X 源码之『 响应式对象 』

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -125,6 +125,29 @@ update (vnode: VNode, hydrating?: boolean)
 
 ### Vue 2.X 源码之『 响应式对象 』:checkered_flag:
 
+```js
+class MyVue {
+  constructor(options) {
+    this.options = options;
+    // 数据的初始化
+    this.initData(options);
+    let el = this.options.id;
+    // 实例的挂载
+    this.$mount(el);
+  }
+
+  initData(options) {
+    // 将数据重置getter，setter方法
+    new Observer(options.data);
+  }
+
+  $mount(el) {
+    // 创建一个渲染的依赖。
+    new Watcher();
+  }
+}
+```
+
 **核心是利用 ES5 的 Object.defineProperty**,这也是 `Vue.js` 为什么不能兼容 `IE8` 及以下浏览器的原因。
 
 `Object.defineProperty` 方法会直接在一个对象上定义一个新属性，或者修改一个对象的现有属性，并返回这个对象。
@@ -135,47 +158,114 @@ Object.defineProperty(
   prop, // 要定义或修改的属性的名称
   descriptor, // 将被定义或修改属性的描述符【核心】
 )
+
+// vue 为了方便响应式管理将这一步放到了 defineReactive 方法中
+const defineReactive = (obj, key) => {
+  const dep = new Dep();
+  const property = Object.getOwnPropertyDescriptor(obj);
+  let val = obj[key]
+  if(property && property.configurable === false) return;
+  Object.defineProperty(obj, key, {
+    configurable: true,
+    enumerable: true,
+    get() {
+      // 做依赖的收集
+      if(Dep.target) {
+        dep.depend()
+      }
+      return val
+    },
+    set(nval) {
+      if(nval === val) return
+      // 派发更新
+      val = nval
+      dep.notify();
+    }
+  })
+}
 ```
 
-> **observe** 这个方法的功能就是用来监测数据的变化。实现方式是给非 `VNode` 的对象类型数据添加 `Observer`对象实例,如果存在`__ob__`属性表示已经添加过则直接返回，否则在满足一定条件下去实例化一个 `Observer` 对象实例。
+Observer 是一个类,它的作用是给对象属性添加 『 getter 』和『 setter 』，具体的行为是将数据对象添加一个不可枚举的属性 `__ob__` ，标志对象是一个响应式对象。
 
-Observer 是一个类,它的作用是给对象属性添加 『 getter 』和『 setter 』,用于 **依赖收集** 和 **派发更新**
+```js
+// Observer 类的定义
+class Observer {
+  constructor(data) {
+    // 实例化时执行walk方法对每个数据属性重写 getter，setter 方法
+    this.walk(data);
+  }
+
+  walk(obj) {
+    const keys = Object.keys(obj);
+    for (let i = 0; i < keys.length; i++) {
+      // Object.defineProperty 的处理逻辑
+      defineReactive(obj, keys[i]);
+    }
+  }
+}
+```
 
 ![](./../resource/interview_vueDep.png)
 
-**依赖收集 getter**（重点关注以下两点）
+#### 依赖收集 getter
 
-- `*const dep = new Dep() // 实例化一个Dep实例`
-- `*在 get 函数中通过 dep.depend 做依赖收集`
+```js
+let uid = 0;
+class Dep {
+  constructor() {
+    this.id = uid++;
+    this.subs = [];
+  }
+  // 依赖收集
+  depend() {
+    if (Dep.target) {
+      // Dep.target 是当前的 watcher ,将当前的依赖推到subs中
+      this.subs.push(Dep.target);
+    }
+  }
+  // 派发更新
+  notify() {
+    const subs = this.subs.slice();
+    for (var i = 0, l = subs.length; i < l; i++) {
+      // 遍历 dep 中的依赖，对每个依赖执行更新操作
+      subs[i].update();
+    }
+  }
+}
+
+Dep.target = null;
+```
 
 `Dep` 是一个 `Class`,它定义了一些属性和方法，它有一个静态属性 `target`，这是一个全局唯一 `Watcher`(同一时间内只能有一个全局的 `Watcher` 被计算)`。Dep` 实际上就是对 `Watcher` 的一种管理，`Dep` 脱离 `Watcher` 单独存在是没有意义的。`Watcher` 和 `Dep` 就是典型的 观察者设计模式，也叫做 `发布-订阅模式`。
 
-`Watcher` 是一个 `Class`,在它的构造函数中定义了一些和 `Dep` 相关的属性：
+**收集过程**：当我们实例化一个渲染 `watcher` 的时候，首先进入 `watcher` 的构造函数逻辑执行 `this.get()` 方法， `get` 函数把 `Dep.target` 赋值为当前渲染 `watcher` 并压栈（`Dep.target.addDep(this)`，将 `watcher` 订阅到这个数据持有的 `dep` 的 `subs` 中，为后续数据变化时通知到哪些 `subs` 做准备）。然后递归遍历添加所有子项的 `getter。`
 
-```javascript
-this.deps = [];
-this.newDeps = [];
-this.depIds = new Set();
-this.newDepIds = new Set();
+```js
+// 监听的依赖
+class Watcher {
+  constructor() {
+    this.get();
+  }
+
+  get() {
+    // 当前执行的watcher
+    Dep.target = this;
+    this.getter();
+    Dep.target = null;
+  }
+  update() {
+    this.get();
+  }
+}
 ```
-
-**收集过程**：当我们实例化一个渲染 `watcher` 的时候，首先进入 `watcher` 的构造函数逻辑，然后执行他的`this.get()`方法，进入 `get` 函数把 `Dep.target` 赋值为当前渲染 `watcher` 并压栈（为了恢复用）。接着执行`vm._render()`方法，生成渲染 `VNode`,并且在这个过程对 `vm` 上的数据访问，这个时候就触发数据对象的 `getter`（在此期间执行`Dep.target.addDep(this)`方法，将 `watcher` 订阅到这个数据持有的 `dep` 的 `subs` 中，为后续数据变化时通知到哪些 `subs` 做准备）。然后递归遍历添加所有子项的 `getter。`
-
-> `Watcher` 在构造函数中初始化两个 `Dep` 实例数组。`newDeps` 代表新添加的 `Dep` 实例数组，`deps` 代表上一次添加的 `Dep` 实例数组。  
-> 依赖清空：在执行清空依赖（`cleanupDeps`）函数时，会首先遍历 `deps`,移除对 `dep` 的订阅，然后把 `newDepsIds` 和 `depIds` 交换，`newDeps` 和 `deps` 交换，并把 `newDepIds` 和 `newDeps` 清空。考虑场景，在条件渲染时，及时对不需要渲染数据的订阅移除，减少性能浪费。
-
-考虑到 Vue 是数据驱动的，所以每次数据变化都会重写 Render,那么`vm._render()`方法会再次执行，并再次触发数据。
 
 收集依赖的目的是为了当这些响应式数据发生变化，触发它们的 setter 的时候，能知道应该通知哪些订阅者去做相应的逻辑处理【**派发更新**】
 
 ---
 
-**派发更新 setter**（重点关注以下两点）
+#### 派发更新 setter
 
-- `*childOb = !shallow && observe(newVal) // 如果shallow为false的情况，会对新设置的值变成一个响应式对象`
-- `*dep.notify() // 通知所有订阅者`
-
-**派发过程**：当我们组件中对响应的数据做了修改，就会触发 `setter` 的逻辑，最后调用`dep.notify()`方法，它是 `Dep` 的一个实例方法。具体做法是遍历依赖收集中建立的 `subs`，也就是 `Watcher` 的实例数组【`subs` 数组在依赖收集 `getter` 中被添加，期间通过一些逻辑处理判断保证同一数据不会被添加多次】，然后调用每一个 `watcher` 的 `update` 方法。
+**派发过程**：当我们组件中对响应的数据做了修改，就会触发 `setter` 的逻辑，调用`dep.notify()`方法，它是 `Dep` 的一个实例方法。具体做法是遍历依赖收集中建立的 `subs`，也就是 `Watcher` 的实例数组【`subs` 数组在依赖收集 `getter` 中被添加，期间通过一些逻辑处理判断保证同一数据不会被添加多次】，然后调用每一个 `watcher` 的 `update` 方法。
 
 `update` 函数中有个`queueWatcher(this)`方法引入了队列的概念，是 `vue` 在做派发更新时优化的一个点，它并不会每次数据改变都会触发 `watcher` 回调，而是把这些 `watcher` 先添加到一个队列中，然后在 nextTick 后执行 `watcher` 的 `run` 函数
 **队列排序保证：**
