--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -1059,12 +1059,27 @@ async function test() {
 优点：代码清晰，处理了回调地狱，不用写一大堆 `then` 回调
 缺点：将异步代码改造为回调，如果多个异步之间没有依赖会降低性能
 
-#### HTTP2 多路复用
+#### HTTP2 特性
 
-`HTTP2` 采用二进制格式传输，取代了 `HTTP1` 的文本格式，二进制解析更高效。多路复用代替了 `HTTP1` 的序列和阻塞机制，所有相同域名下的请求都在统一 `TCP` 连接并发完成。在 `HTTP1` 中，每一个请求需要建立一个 `TCP` 链接。`HTTP2` 中：
+##### 二进制分帧
+
+`HTTP2` 采用二进制格式传输，取代了 `HTTP1` 的文本格式，二进制解析更高效。
+
+##### 多路复用
+
+多路复用代替了 `HTTP1` 的序列和阻塞机制，所有相同域名下的请求都在统一 `TCP` 连接并发完成。在 `HTTP1` 中，每一个请求需要建立一个 `TCP` 链接。`HTTP2` 中：
 
 - 同域名下所有通信都在同一 `TCP` 连接下完成，消除了多个 `TCP` 连接带来的延时和内存消耗。
 - 单个连接可以并行交错的请求和响应，之间互不干扰。
+
+##### 头部压缩
+
+##### 请求优先级
+
+- 优先级最高：主要的 html
+- 优先级搞：CSS 文件
+- 优先级中：js 文件
+- 优先级低：图片
 
 #### 回流和重绘（reflow，repaint）
 
