refactor: 更新 行为型模式 定义

--- a/design/设计原则-甲.md
+++ b/design/设计原则-甲.md
@@ -44,7 +44,7 @@
 
 ##### 行为型模式
 
-行为模式关注改善或精简在系统中不同对象间通信。行为模式包括：
+行为模式关注改善或精简在系统中不同对象间高效沟通和职责委派。行为模式包括：
 
 - 模板方法模式（Template Method）
 - 策略模式（Strategy）
