feat: 增加 性能指标 RAIL

--- a/chatAbout/前端物语-常识.md
+++ b/chatAbout/前端物语-常识.md
@@ -411,3 +411,15 @@ Javascript 是运行在单线程环境中，无法同时运行多个脚本，当
 #### 对于非同源标签页
 
 可以嵌入同源 `iframe` 作为“桥”，将非同源标签页通信转化为同源标签页通信。
+
+### 性能指标 RAIL
+
+- R：response 响应
+- A：animation 动画
+- I：idle 浏览器空置状态
+- L：load 加载
+
+| Response                 | Animation                           | Idle                   | Load                            |
+| ------------------------ | ----------------------------------- | ---------------------- | ------------------------------- |
+| 轻触后 100 ms 内需要响应 | 每一帧渲染 16 ms 内完成             | 合理利用浏览器空余时间 | 加载的过程需要满足“响应”目标    |
+|                          | 拖拽后的页面渲染也要在 16 ms 内完成 | 任务要在 50 ms 内完成  | 最终内容要在 1000 ms 内加载完成 |
