--- a/design/设计原则-甲.md
+++ b/design/设计原则-甲.md
@@ -67,19 +67,13 @@
 - 对象状态：状态模式
 - 解释器模式
 
-### 设计原则
+### 设计原则 SOLID
 
-##### 一、单一设计原则
-
-    一个对象或方法只做一件事情。如果一个方法成单率过多的职责，那么在需求的变迁过程中，需要改写这个方法的可能性就越大
-
-##### 二、最少知识原则
-
-     一个软件实体应当尽可能少的与其他实体发生相互作用，尽量减少对象之间的交互，如果两个对象之间不必彼此直接通信，那么这两个对象就不要发生直接的相互联系，可以交给第三方进行处理
-
-##### 三、开放-封闭原则
-
-    软件实体（类、模块、函数）等应该是可以扩展的，但是不可修改。当需要改变一个程序的功能或者给这个程序增加新功能的时候，可以使用增加代码的方式，尽量避免改动程序的代码，防止影响原系统的稳定
+- 单一职责原则 **S**
+- 开发封闭原则 **O**
+- 李氏置换原则 **L**
+- 接口独立原则 **I**
+- 依赖倒置原则 **D**
 
 ### 什么是设计模式
 
