feat: 增加 防抖节流的应用场景

--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -266,6 +266,10 @@ func(" a,B,C "); // " a,B,C " -> "a,B,C" -> 'a,b,c' -> ["a", "b", "c"]
 - 函数防抖：(任务触发的间隔超过指定间隔的时候，任务才会执行)
   - 定义：多次触发事件后，事件处理函数只执行一次，并且是在触发操作结束时执行。
   - 原理：对处理函数进行延时操作，若设定的延时到来之前，再次触发事件，则清除上一次的延时操作定时器，重新定时。
+  - 应用：
+    - `input` 输入框输入内容后发送请求，需要防抖
+    - 调整浏览器大小时 `resize` 频繁，造成计算过多，需要防抖
+    - 编辑器实时保存，需要在无编辑一段时间后自动保存
   - 手写代码:
   ```javascript
   function debounce(fn, wait = 500) {
@@ -281,6 +285,9 @@ func(" a,B,C "); // " a,B,C " -> "a,B,C" -> 'a,b,c' -> ["a", "b", "c"]
 - 函数节流：(指定时间间隔内只会执行一次任务)
   - 定义：触发函数事件后，短时间间隔内无法连续调用，只有上一次函数执行后，过了规定的时间间隔，才能进行下一次的函数调用
   - 原理：设置状态，对处理函数进行延时操作，若下一次事件触发设定的延时到来之前，状态还没更新，事件无效。
+  - 应用：
+    - `mousedown` 鼠标不断点击触发，比如保存更新按钮，需要节流
+    - `scroll` 事件，比如是否滑到底部自动加载更多，需要节流
   - 手写代码：
   ```javascript
   function throttle(fn, wait = 500) {
