refactor: 更新 React hook 原理

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -999,12 +999,21 @@ function App() {
 useState，大体逻辑如下：
 
 ```javascript
+const fiber = {
+  // 保存该 FunctionComponent 对应的 Hooks 链表
+  hook: null,
+};
+
 function useState(initialState) {
   // 当前useState使用的hook会被赋值该该变量
   let hook;
 
   if (isMount) {
     // ...mount时需要生成hook对象
+    hook = {
+      memoizedState: initialState
+      next: null
+    };
   } else {
     // ...update时从workInProgressHook中取出该useState对应的hook
   }
@@ -1038,7 +1047,7 @@ isMount = true;
 
 function schedule() {
   // 更新前将workInProgressHook重置为fiber保存的第一个Hook
-  workInProgressHook = fiber.memoizedState;
+  workInProgressHook = fiber.hook;
   // 触发组件render
   fiber.stateNode();
   // 组件首次render为mount，以后再触发的更新为update
