refactor: 更新 HTTP 缓存机制

--- a/chatAbout/前端物语-常识.md
+++ b/chatAbout/前端物语-常识.md
@@ -22,7 +22,9 @@
 #### HTTP 缓存机制
 
 1. 浏览器发送请求前，根据请求头的`expries`和`cache-control`判断是否命中强缓存策略。如果命中，直接从缓存中获取资源，并不会发送请求。如果没有命中，则进行下一步。
+   > 当 `cache-control` 设置为 `max-age=xx` 并且同时设置 `Expires` 时，`cache-control` 的优先级更高
 2. 没有命中强缓存规则，浏览器会发送请求，根据请求头的`last-modified`和`etag`判断是否命中协商缓存。如果命中，直接从缓存中获取资源。如果没有命中，则进行下一步。
+   > 当 `etag` 和 `last-modified` 同时存在时，服务器先会检查 `etag`，然后再检查 `last-modified`，最终决定返回 304 还是 200
 3. 如果前两步都没有命中，直接从服务端获取资源。
 
   <img src="./../resource/chatAbout_httpCache.png" />
