refactor: 函数式编程补充

--- a/chatAbout/前端物语-常识.md
+++ b/chatAbout/前端物语-常识.md
@@ -345,6 +345,11 @@ export * from 'fs'
 - 触发任何外部进程
 - 调用另一个有副作用的函数
 
+副作用带来的问题：
+
+- 没有副作用的功能可以并行执行，而有副作用的功能通常需要同步才能保证结果正确性。
+- 没有副作用的函数可以进行更积极的优化（例如，透明的使用结果缓存），因为只要我们获得正确的结果，函数是否真正执行甚至都没有关系。
+
 ##### 引用透明
 
 纯函数的运行不应该依赖于外部变量或状态，只依赖于输入的参数。对于相同的输入参数，返回的结果一定相同。
