feat: 增加 CDN 缓存

--- a/chatAbout/前端物语-常识.md
+++ b/chatAbout/前端物语-常识.md
@@ -430,3 +430,27 @@ Javascript 是运行在单线程环境中，无法同时运行多个脚本，当
 | ------------------------ | ----------------------------------- | ---------------------- | ------------------------------- |
 | 轻触后 100 ms 内需要响应 | 每一帧渲染 16 ms 内完成             | 合理利用浏览器空余时间 | 加载的过程需要满足“响应”目标    |
 |                          | 拖拽后的页面渲染也要在 16 ms 内完成 | 任务要在 50 ms 内完成  | 最终内容要在 1000 ms 内加载完成 |
+
+### CDN 缓存
+
+#### CDN 的定义
+
+CDN（内容分发网络）解决的是如何将数据快速可靠的从源站点传递到客户端，通过 CDN 对数据的分发，用户可以从一个距离较近的服务器获取数据，而不是源站点，从而达到快速访问、且能减少源站点负载压力的问题。
+
+跟没使用 CDN 请求关键的不同是，使用了 CDN 在 DNS 解析时 CDN 负载均衡设备会为用户选择一台合适的缓存服务器提供服务。选择的依据包括：
+
+- 判断哪一台服务器距离用户最近
+- 根据用户所请求的 URL 中携带的内容名称，判断哪一台服务器上有用户所需内容
+- 查询各个服务器的负载情况，判断哪一台服务器的负载较小。
+
+#### CDN 缓存
+
+http 缓存是浏览器端缓存，cdn 是服务器端缓存。
+
+用户浏览器与服务器交互，没有接入 CDN 时：
+
+> 用户在浏览网站的时候，浏览器能够在本地保存网站中的图片或者其他文件的副本，这样用户再次访问该网站的时候，浏览器就不用再下载全部的文件，减少了下载量意味着提高了页面加载的速度。
+
+用户浏览器与服务器交互，接入 CDN 时：
+
+> 客户端浏览器先检查是否有本地缓存是否过期，如果过期，则向 CDN 边缘节点发起请求，CDN 边缘节点会根据 `cache-control` 和 `max-age` 检测用户请求数据的缓存是否过期，如果没有过期，则直接响应用户请求，此时一个完成 http 请求结束；如果数据已经过期，那么 CDN 还需要向源站发出回源请求,来拉取最新的数据。
