--- a/interview/前端进阶-丁.md
+++ b/interview/前端进阶-丁.md
@@ -85,7 +85,9 @@
 只要所引用的对象的其他引用都被清除，垃圾回收机制就会释放该对象所占用的内存。
 也就是说，一旦不再需要，WeakMap 里面的键名对象和所对应的键值对会自动消失，不用手动删除引用。
 
-#### 手写 Array.flat
+#### 手写 Array.flat、Array.reduce、Array.map
+
+##### Array.flat
 
 ```javascript
 Array.prototype.flat = function () {
@@ -100,6 +102,35 @@ Array.prototype.flat = function () {
 
 [[2], [[2, 3], [2]], 3, 4].flat();
 // [2, 2, 3, 2, 3, 4]
+```
+
+##### Array.reduce
+
+```javascript
+Array.prototype.reduce = function (fn, initialValue) {
+  const arr = Array.prototype.slice.call(this);
+  let ans = initialValue ? initialValue : arr[0];
+  let startIndex = initialValue ? 0 : 1;
+  for (let i = startIndex; i < arr.length; i++) {
+    // reduce 的四个参数累计器、当前值、当前索引、源数组
+    ans = fn.call(null, ans, arr[i], i, this);
+  }
+  return ans;
+};
+```
+
+##### Array.map
+
+```javascript
+Array.prototype.map = function (fn, context) {
+  const arr = Array.prototype.slice.call(this);
+  const ans = [];
+  for (let i = 0; i < arr.length; i++) {
+    // map callback 的三个参数当前值、当前索引、源数组
+    ans.push(fn.call(context, arr[i], i, this));
+  }
+  return ans;
+};
 ```
 
 #### 手写单例模式
