refactor: 更新 关于 Ref

--- a/interview/前端基础-丙.md
+++ b/interview/前端基础-丙.md
@@ -12,9 +12,16 @@
 
 ##### Vue
 
-    只要想要在 Vue 中直接操作 DOM 元素，就必须用 ref 属性进行注册.先在 DOM 中使用 ref 标签进行了注册，然后便可以通过 this.$refs 再跟注册时的名称来引用 DOM 元素了
+两种用处：
+
+- 页面获取 dom 元素
+- 获取子组件中的 data、方法
+
+> 只要想要在 Vue 中直接操作 DOM 元素，就必须用 ref 属性进行注册.先在 DOM 中使用 ref 标签进行了注册，然后便可以通过 this.$refs 再跟注册时的名称来引用 DOM 元素了
 
 ##### React
+
+表示为对组件真正实例的引用，其实就是 `ReactDOM.render()` 返回的组件实例，虚拟 dom。通过回调函数或者 `React.createRef()` 绑定
 
     ref 用在处理表单空间聚焦，文本选择，媒体播放以及触发动画效果等等. ref 是一个 React 的非常特殊的属性，这个属性一定是接受一个回调函数，这个回调函数会在组件渲染时进行执行一遍，在从视图中撤出来时会执行一遍
 
